--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.11.0",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.3"
   },
