--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lottie": "^1.2.10",
     "react-scripts": "5.0.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.3"
